--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,59 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GestionEmployesBackoffice</title>
+  <title>Gestion Employes ::.</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
+    <i class="spinner-grow spinner-grow-sm"></i>
+    <span class="m-1">Loading...</span>
+  </div>
+  
+</body>
+</html> -->
+
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Gestion Employes ::.</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.min.css">
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <style>
+    /* Ajouter une animation personnalisée */
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    .spinner {
+      border: 4px solid rgba(0, 0, 0, 0.1); /* Légère transparence */
+      border-top-color: #ff5722; /* Couleur orange pour correspondre à ton thème */
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      animation: spin 1s ease-in-out infinite; /* Spinner animé en rotation */
+    }
+  </style>
+</head>
+<body class="bg-gray-100">
+  <div class="flex items-center justify-center h-screen">
+    <div class="text-center">
+      <!-- Le spinner -->
+      <div class="spinner mx-auto mb-4"></div>
+      <!-- Texte de chargement -->
+      <span class="text-gray-700 font-semibold text-lg">Chargement...</span>
+    </div>
+  </div>
 </body>
 </html>
+
